--- a/config/config.json
+++ b/config/config.json
@@ -1,7 +1,7 @@
 {
   "development": {
-    "username": "elbrus_user",
-    "password": "123",
+    "username": "admindb",
+    "password": "admindb",
     "database": "elbrus",
     "host": "127.0.0.1",
     "dialect": "postgres",
