--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
   "scripts": {
     "start": "node app.js",
     "up": "npx sequelize-cli db:migrate",
-    "down": "sequelize-cli db:migrate:undo",
-    "many": "NODE_ENV=test node appMany.js"
+    "down": "npx sequelize-cli db:migrate:undo:all"
   },
   "keywords": [],
   "author": "",
@@ -15,9 +14,9 @@
   "dependencies": {
     "pg": "^8.6.0",
     "pg-hstore": "^2.3.4",
-    "sequelize": "^6.6.5"
+    "sequelize": "^6.21.0"
   },
   "devDependencies": {
-    "sequelize-cli": "^6.2.0"
+    "sequelize-cli": "^6.4.1"
   }
 }
